# Magnificator

./: .gitignore  CMakeLists.txt  HOW_TO_BUILD_ON_GITHUB.md  README.md  build-windows.yml  mingw-w64-x86_64.cmake
